WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275172
[WebGPU] RenderPassEncoder::clampIndirectIndexBufferToValidValues does not handle destroyed buffers
https://bugs.webkit.org/show_bug.cgi?id=275172
Summary
[WebGPU] RenderPassEncoder::clampIndirectIndexBufferToValidValues does not ha...
Mike Wyrzykowski
Reported
2024-06-05 11:14:33 PDT
[WebGPU] RenderPassEncoder::clampIndirectIndexBufferToValidValues does not handle destroyed buffers
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-06-05 11:14:45 PDT
radar://129227496
Mike Wyrzykowski
Comment 2
2024-06-05 11:33:21 PDT
radar://129227403
Mike Wyrzykowski
Comment 3
2024-06-05 11:33:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29552
EWS
Comment 4
2024-06-06 23:31:23 PDT
Committed
279798@main
(c0fad7776035): <
https://commits.webkit.org/279798@main
> Reviewed commits have been landed. Closing PR #29552 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug