[WebGPU] RenderPassEncoder::clampIndirectIndexBufferToValidValues does not handle destroyed buffers https://bugs.webkit.org/show_bug.cgi?id=275172 <radar://129227403>

Reviewed by Dan Glastonbury.

If the indirect buffer is already destroyed, the draw command should be skipped.

* LayoutTests/fast/webgpu/nocrash/fuzz-126711484.html: Renamed from LayoutTests/fast/webgpu/fuzz-126711484.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-128396311.html: Renamed from LayoutTests/fast/webgpu/fuzz-128396311.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-272863.html: Renamed from LayoutTests/fast/webgpu/fuzz-272863.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-272903.html: Renamed from LayoutTests/fast/webgpu/fuzz-272903.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-272911.html: Renamed from LayoutTests/fast/webgpu/fuzz-272911.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273017.html: Renamed from LayoutTests/fast/webgpu/fuzz-273017.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273021.html: Renamed from LayoutTests/fast/webgpu/fuzz-273021.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273023.html: Renamed from LayoutTests/fast/webgpu/fuzz-273023.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273323.html: Renamed from LayoutTests/fast/webgpu/fuzz-273323.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273503.html: Renamed from LayoutTests/fast/webgpu/fuzz-273503.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273505.html: Renamed from LayoutTests/fast/webgpu/fuzz-273505.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273566.html: Renamed from LayoutTests/fast/webgpu/fuzz-273566.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273570.html: Renamed from LayoutTests/fast/webgpu/fuzz-273570.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273573.html: Renamed from LayoutTests/fast/webgpu/fuzz-273573.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273578.html: Renamed from LayoutTests/fast/webgpu/fuzz-273578.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-273585.html: Renamed from LayoutTests/fast/webgpu/fuzz-273585.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-274161.html: Renamed from LayoutTests/fast/webgpu/fuzz-274161.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-274171.html: Renamed from LayoutTests/fast/webgpu/fuzz-274171.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-274270.html: Renamed from LayoutTests/fast/webgpu/fuzz-274270.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-274271.html: Renamed from LayoutTests/fast/webgpu/fuzz-274271.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-274275.html: Renamed from LayoutTests/fast/webgpu/fuzz-274275.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-274289.html: Renamed from LayoutTests/fast/webgpu/fuzz-274289.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-274290.html: Renamed from LayoutTests/fast/webgpu/fuzz-274290.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-274317.html: Renamed from LayoutTests/fast/webgpu/fuzz-274317.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-274334.html: Renamed from LayoutTests/fast/webgpu/fuzz-274334.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-274622.html: Renamed from LayoutTests/fast/webgpu/fuzz-274622.html.
* LayoutTests/fast/webgpu/nocrash/fuzz-275172-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-275172.html: Added.
* LayoutTests/fast/webgpu/nocrash/repro_274977.html: Renamed from LayoutTests/fast/webgpu/regression/repro_274977.html.
Move no-crash regression tests to seperate path to avoid regular updates to TestExpectations

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::clampIndirectIndexBufferToValidValues):
Return 'Skip' on destroyed buffers.

Canonical link: https://commits.webkit.org/279798@main